<resources>
    <string name="app_name">FAS</string>
    <string name="format_yyyy_MM_dd">yyyy-MM-dd</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash">Splash</string>
    <string name="home">Home</string>
    <string name="sensor">Cảm biến</string>
    <string name="add_sensor_success">Thêm cảm biến thành công</string>
    <string name="users">Người dùng</string>
    <string name="add_user_success">Thêm người dùng thành công</string>
    <string name="room">Phòng</string>
    <string name="setting">Cài đặt</string>
    <string name="login">Đăng nhập</string>
    <string name="user_not_exist">Tài khoản của bạn chưa được đăng ký cho tòa nhà %s !</string>
    <string name="an_error_occurred">Đã có lỗi xảy ra, xin vui lòng thử lại sau !</string>
    <string name="invalid_otp_code">Mã xác minh không chính xác. Vui lòng thử lại !</string>
    <string name="select_building">Chọn tòa nhà</string>
    <string name="confirm">Xác nhận</string>
    <string name="select_building_note">Chọn toà nhà nơi bạn sinh sống</string>
    <string name="login_note">Nhập số điện thoại để đăng nhập vào tài khoản</string>
    <string name="phone_number_edt">Nhập số điện thoại</string>
    <string name="no_account">Không có tài khoản ?</string>
    <string name="register_now">Đăng ký ngay</string>
    <string name="notification">Thông báo</string>
    <string name="opt_note">Nhập mã xác minh được gửi tới số điện thoại %s của bạn</string>
    <string name="floor">Tầng</string>
    <string name="manage_sensor">Quản lý cảm biến</string>
    <string name="apartment">Căn hộ</string>
    <string name="normal">Bình thường</string>
    <string name="off">Đang Tắt</string>
    <string name="on">Bật</string>
    <string name="warning">Đang cảnh báo</string>
    <string name="fire">Đang cháy</string>
    <string name="unknown">Không có trạng thái</string>
    <string name="sensor_chart_with_type">Biểu đồ giá trị cảm biến %s</string>
    <string name="confirm_otp">Xác thực mã OTP</string>
    <string name="edit_sensor">Chỉnh sửa cảm biến</string>
    <string name="sensor_type">Loại cảm biến</string>
    <string name="sensor_id">Mã cảm biến</string>
    <string name="change_room">Đổi phòng</string>
    <string name="cancel">Thoát</string>
    <string name="sensor_type_name">Cảm biến %s</string>
    <string name="manage_users">Quản lý người dùng</string>
    <string name="manage_building">Quản lý toà nhà</string>
    <string name="add_user">Thêm người dùng</string>
    <string name="user_name_edt">Nhập tên người dùng</string>
    <string name="building_name_edt">Nhập tên toàn nhà</string>
    <string name="floor_name_edt">Nhập tên tầng</string>
    <string name="apartment_name_edt">Nhập tên căn hộ</string>
    <string name="room_name_edt">Nhập tên phòng</string>
    <string name="select_floor">Chọn tầng</string>
    <string name="select_apartment">Chọn căn hộ</string>
    <string name="select_room">Chọn phòng</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="change_name">Đổi tên</string>
    <string name="delete_user">Xóa người dùng</string>
    <string name="delete_floor">Xóa tầng</string>
    <string name="delete_apartment">Xóa căn hộ</string>
    <string name="delete_room">Xóa phòng</string>
    <string name="change_user_name">Đổi tên người dùng</string>
    <string name="change_building_name">Đổi tên tòa nhà</string>
    <string name="change_floor_name">Đổi tên tầng</string>
    <string name="change_apartment_name">Đổi tên căn hộ</string>
    <string name="change_room_name">Đổi tên phòng</string>
    <string name="add_sensor">Thêm cảm biến</string>
    <string name="sensor_id_edt">Nhập mã cảm biến</string>
    <string name="sensor_name_edt">Nhập tên cảm biến</string>
    <string name="enter_manually_intro">Nhập thủ công loại cảm biến và nhập mã của cảm biến bằng bàn phím để thêm cảm biến vào hệ thống</string>
    <string name="enter_manually">Nhập thủ công</string>
    <string name="or">Hoặc</string>
    <string name="scan_qr_code">Quét mã QR</string>
    <string name="scan_qr_code_intro">Quét mã QR được dán ở cảm biến để thêm nhanh mã cảm biến, loại cảm biến</string>
    <string name="scan_qr_code_detail">Tìm mã trên thiết bị hoặc bao bì sản phẩm và đặt mã trước camera của điện thoại để quét.</string>
    <string name="manage_rooms">Quản lý phòng</string>
    <string name="all">Tất cả</string>
    <string name="add_floor">Thêm tầng</string>
    <string name="add_apartment">Thêm căn hộ</string>
    <string name="add_room">Thêm phòng</string>
    <string name="name">Tên</string>
    <string name="qr_code">Mã QR</string>
    <string name="building_info">Thông tin tòa nhà</string>
    <string name="setting_notification">Cài đặt thông báo</string>
    <string name="contact">Liên hệ</string>
    <string name="support">Hỗ trợ</string>
    <string name="logout">Đăng xuất</string>
</resources>